Clean up with J12-17 features